--- a/block-BJaaed/code/index.html
+++ b/block-BJaaed/code/index.html
@@ -7,6 +7,11 @@
     <link rel="stylesheet" href="style.css" />
   </head>
   <body>
+    <div class="list">
+      <ul class=" flex">
+
+      </ul>
+    </div>
     <script src="./script.js"></script>
   </body>
 </html>
