--- a/block-BJaaef/code/index.html
+++ b/block-BJaaef/code/index.html
@@ -7,7 +7,9 @@
     <link rel="stylesheet" href="style.css" />
   </head>
   <body>
-    <script src="./data.js"></script>
-    <script src="./script.js"></script>
+    <div class="container" >
+      <ul></ul>
+    </div>
+    <script src="script.js"></script>
   </body>
 </html>
